# cage

./: cage.c  cfg.c  cfg.h  meson.build  output.c  output.h  seat.c  server.c  server.h  test.cfg  view.c  xdg_shell.c  xdg_shell.h
protocols/: meson.build
